--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             </div>
             <div class="portfolio-main-wrap">
                 <div class="main-wrap-left">
-                    <a href="http://oasis-web.work"><img src="img_profile/portfolio_main.png" alt="ポートフォリオサイト1"></a>
+                    <a href="https://oasis-web.work"><img src="img_profile/portfolio_main.png" alt="ポートフォリオサイト1"></a>
                 </div>
                 <div class="main-wrap-right">
                     <h2>OASIS<span>(架空サイト)</span></h2>
@@ -219,7 +219,7 @@
                     <p>API：Google Map API</p>
                     <p>ツール：adobe PhotoShop</p>
                     <p>サイトページ数：5</p>
-                    <a href="http://oasis-web.work">サイトURL</a>
+                    <a href="https://oasis-web.work">サイトURL</a>
                 </div>
             </div>
             <h4>模写コーディング</h4>
